Fix - dark mode css

--- a/src/App.css
+++ b/src/App.css
@@ -13,26 +13,6 @@
 @import "./styles/QuoteGenerator.css";
 @import "./styles/Dashboard.css";
 
-#root {
-  --black: #222222;
-  --border: rgb(225, 225, 225);
-  --grey: #777777;
-  --dark-grey: #5e5e5e;
-  --green: #008a5d;
-  --dark-green: #006745;
-  --teal: #00bdae;
-  --blue: #009fa5;
-  --dark-blue: #006f73;
-  --yellow: #ffb62f;
-  --dark-yellow: #eba118;
-  --purple: #784d8e;
-  --hover: #f6f6f6;
-  --dark-hover: #e0e0e0;
-  --red: #de3333;
-  --dark-red: #881f1f;
-  --shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-}
-
 button {
   font-size: 0.9rem;
   border-radius: 5px;
